--- a/SeyehatProjesi/web/index.html
+++ b/SeyehatProjesi/web/index.html
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       
       		<div class="grids">
       	<div class="box1">
-                                <div class="padding">
+                                <!--<div class="padding">
                                     <h4>This Week's Top 10</h4>
                                     <ul class="list list-pad">
                                         <li class="list-bg"><span>1.</span><a href="#">formas humanitatis pe</a></li>
@@ -147,7 +147,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li class="list-bg1"><span>10.</span><a href="#">dolore te feu</a></li>
                                     </ul>
                                     <a href="#" class="link1">See all hotels</a>
-                                </div>
+                                </div>-->
                         		<div class="padding1">
                                     <h4>Our Best Places</h4>
                                     <div class="box-left">
